force-app/main/default/objects/HW_Quality__c/HW_Quality__c.object-meta.xml
<CustomObject>
    <label>HW Quality</label>
    <nameField>
        <displayFormat>HW-{0000}</displayFormat>
        <label>HW Quality Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HW Quality</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>