force-app/main/default/objects/HW_Quality__c/fields/Area_Of_Failure_Description__c.field-meta.xml
<CustomField>
    <fullName>Area_Of_Failure_Description__c</fullName>
    <label>Area Of Failure Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>