force-app/main/default/objects/HW_Quality__c/fields/OBF_Ind__c.field-meta.xml
<CustomField>
    <fullName>OBF_Ind__c</fullName>
    <label>OBF Ind</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>