force-app/main/default/objects/HW_Quality__c/fields/OBF_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OBF_Quantity__c</fullName>
    <label>OBF Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>