force-app/main/default/objects/HW_Quality__c/fields/OBF_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>OBF_Reporting_Date__c</fullName>
    <label>OBF Reporting Date</label>
    <type>Date</type>
</CustomField>