force-app/main/default/objects/HW_Quality__c/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <label>PID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>