force-app/main/default/objects/HW_Quality__c/fields/SR_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>SR_Type_Code__c</fullName>
    <label>SR Type Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>