force-app/main/default/objects/HW_Quality__c/fields/Total_Used_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Used_Quantity__c</fullName>
    <label>Total Used Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>